# tucuxi-gui

./: .gitignore  .gitmodules  CMAKE_SETUP.txt  README.md  README.rst  cdss-config.ini  cdss-exec.ini  cmake_example.txt  flatrequest.ini  setup.bat  setup.sh
dev/: .gitignore  CMakeLists.txt
dev/libs/: CMakeLists.txt  setup.bat  setup.sh
dev/libs/xerces-c/: To  build.bat  version.txt
dev/scripts/deploy/mac/: build_mac_dmg.sh  build_mac_dmg2.sh
dev/scripts/deploy/win/: Compile-all.bat  Deploy.bat  Deploy32.bat  Deploy64-demo.bat  Deploy64.bat  Deploy64_YTA.bat  Tucuxi.nsi  compile.bat  compile_and_deploy.bat  deploy.bat  deploy_setup.bat  tucuxi.nsi
dev/src/: .qmake.conf  CMakeLists.txt  Doxyfile  boost.pri  botan.pri  current_version.h  eigen.pri  gsl.pri  qwt.pri  translation.pri  tucuxi.pri  tucuxi.pro
dev/src/ICCA/: ICCA.pro  iccainterpretationrequestbuilder.cpp  iccainterpretationrequestbuilder.h  iccarequestfileclient.cpp  iccarequestfileclient.h  iccarequestsclientprocessing.cpp
dev/src/QtWebApp/QtWebApp/: QtWebApp.pro
dev/src/admin/: admin.pro  errors_admin.h
dev/src/admin/src/: adminfactory.h  dataxmlexport.cpp  dataxmlexport.h  interpretationtorequestxmlexport.cpp  interpretationtorequestxmlexport.h  (+7 more)
dev/src/apputils/: CMakeLists.txt  apputils.pro  errors_apputils.h
dev/src/chart/: CMakeLists.txt  chart.cpp  chart.h  chart.pro  chartcolormanager.cpp  chartcolormanager.h  chartitem.h  chartitemgroup.cpp  chartitemgroup.h  curve.cpp  curve.h  dot.cpp  dot.h  item.cpp  item.h  line.cpp  line.h  percentilecurve.cpp  percentilecurve.h  plotpicker.cpp  plotpicker.h  targetinterval.cpp  targetinterval.h  timescaledraw.cpp  timescaledraw.h
dev/src/cli/: cli.pro  errors_cli.h  main.cpp  rlutil.h
dev/src/cliutils/: CMakeLists.txt  action.cpp  action.h  cli_errors.cpp  cli_errors.h  climanager.cpp  climanager.h  climessagehandler.cpp  climessagehandler.h  cliutils.pro  errors_cliutils.h  sphinxmacros.h
dev/src/core/: CMakeLists.txt  aborter.h  core-cmake.h.in  core.cpp  core.h  core.pro  core_errors.cpp  corefactory.cpp  corefactory.h  corerepository.h  curvemodel.cpp  curvemodel.h  definitionmanager.cpp  definitionmanager.h  distributor.cpp  distributor.h  drugxmldescriptor.cpp  drugxmldescriptor.h  ephemeraldb.cpp  errors_core.h  errors_processing.h  knownmodels.h  pluginmanager.cpp  pluginmanager.h  processingfactory.cpp  processingfactory.h  sentencepalette.cpp  sentencepalette.h  settings.cpp  settings.h  stdparamnames.cpp  stdparamnames.h
dev/src/databases/: CMakeLists.txt  databases.pro
dev/src/dbanonymisator/: dbanonymisator.pro  dbhandler.cpp  dbhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
dev/src/dbupdater/: dbhandler.cpp  dbhandler.h  dbupdater.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
dev/src/doc/: CMakeLists.txt  Doxygen.cfg  Doxygen.cfg.cmake
dev/src/drugeditor/: MainWindow.qml  drugeditor.pro  window.qrc
dev/src/drugs/: ch.heig-vd.ezechiel.amikacin.xml  ch.heig-vd.ezechiel.amikacin_adults_1CP.xml  ch.heig-vd.ezechiel.atazanavir.xml  ch.heig-vd.ezechiel.busulfan_children.xml  ch.heig-vd.ezechiel.busulfan_children_2CP.xml  ch.heig-vd.ezechiel.busulfan_children_2CP_cuauc.xml  ch.heig-vd.ezechiel.busulfan_children_cuauc.xml  ch.heig-vd.ezechiel.carbamazepine.xml  ch.heig-vd.ezechiel.daptomycin.xml  ch.heig-vd.ezechiel.dasatinib_CHECK_ERR_MOD.xml  ch.heig-vd.ezechiel.digoxin.xml  ch.heig-vd.ezechiel.efavirenz.xml  ch.heig-vd.ezechiel.genta_adults_2cp.xml  ch.heig-vd.ezechiel.gentamicin_adults_1CP.xml  ch.heig-vd.ezechiel.imatinib.xml  ch.heig-vd.ezechiel.meropenem.xml  ch.heig-vd.ezechiel.teicoplanin_adults.xml  ch.heig-vd.ezechiel.tobramycin.xml  ch.heig-vd.ezechiel.tobramycinCF.xml  ch.heig-vd.ezechiel.vancomycin.xml  ch.heig-vd.ezechiel.vancomycin_adults.xml  ch.heig-vd.ezechiel.vancomycin_adults_1CP.xml  drug.css  drugsmodel.xsl
dev/src/flatimport/: flatimport.pro  flatimportinterpretationrequestbuilder.cpp  flatimportinterpretationrequestbuilder.h  flatimportrequestfileclient.cpp  flatimportrequestfileclient.h  flatimportrequestsclientprocessing.cpp  flatimportrequestsclientprocessing.h  iccarequestsclientprocessing.h
dev/src/flatrequests/: CMakeLists.txt  LoginDialog.cpp  LoginDialog.h  flatinterpretationrequestbuilder.cpp  flatinterpretationrequestbuilder.h  flatrequestfileclient.cpp  flatrequestfileclient.h  flatrequestnametranslator.cpp  flatrequestnametranslator.h  flatrequestparameters.cpp  flatrequestparameters.h  flatrequests.pro  flatrequestsclientprocessing.cpp  flatrequestsclientprocessing.h
dev/src/gui/: errors_gui.h  gui.pro  qmldeps.qml
dev/src/guiutils/: CMakeLists.txt  errors_guiutils.h  guiutils.pro
dev/src/plugins/: CMakeLists.txt  plugins.pro
dev/src/processingrestserversimple/: main.cpp  processingrestserversimple.pro  request.xml  request_url.txt
dev/src/processingserver/: processingserver.pro
dev/src/processingtestclient/: processingtestclient.pro
dev/src/processingtucucore/: CMakeLists.txt  processingtucucore.pro
dev/src/report/: CMakeLists.txt  compactreport.cpp  compactreport.h  customreport.cpp  customreport.h  defaultreport.cpp  defaultreport.h  identifiers.h  report.cpp  report.h  report.pro  reportdata.cpp  reportdata.h  reportfactory.cpp  reportfactory.h  reportrepository.h  reporttemplate.cpp  reporttemplate.h  reporttemplatefactory.cpp  reporttemplatefactory.h  reporttemplatexmlfactory.cpp  reporttemplatexmlfactory.h
dev/src/repository/: repository.pro
dev/src/rest/: CMakeLists.txt  errors_rest.h  requestsclientprocessing.cpp  requestsclientprocessing.h  rest.pro  resterrors.h  restlogger.cpp  restlogger.h  restrequestsclient.cpp  restrequestsclient.h
dev/src/restclient/: errors_restclient.h  main.cpp  restclient.pro
dev/src/restserver/: main.cpp  restserver.pro
dev/src/tcpclient/: CMakeLists.txt  tcpclient.pro
dev/src/xmleditor/: editorpanel.cpp  editorpanel.h  editorpanel.ui  main.cpp  xmleditor.pro  xmleditorerrors.h  xmleditormessagehandler.cpp  xmleditormessagehandler.h
dev/test/gui/: CMakeLists.txt  tucuxi-gui-test.pri
(+1214 files in other folders)
